--- a/pickle.1
+++ b/pickle.1
@@ -1,5 +1,13 @@
 .\" Manpage for pickle
 .\" Contact howe.r.j.89@gmail.com to correct errors or typos.
+.de Xs
+.in +.5i
+.ll -.5i
+..
+.de Xe
+.in
+.ll
+..
 .TH pickle 1 "20 Jun 2019" "1.0.0" "pickle man page"
 .SH NAME
 pickle \- An interpreter for a TCL like language.
@@ -34,37 +42,31 @@ Things to bear in mind about the language:
 
 The syntax includes:
 
-.br
-	string  called if first string, argument if not
-.br
-	{ }     quote, used to prevent evaluation
-.br
-	[ ]     command substitution
-.br
-	" "     string
-.br
-	$var    variable lookup
-.br
-	\\c      escape a character
-.br
-	#       comment
-.br
+.nf
+\&	string  called if first string, argument if not
+\&	{ }     quote, used to prevent evaluation
+\&	[ ]     command substitution
+\&	" "     string
+\&	$var    variable lookup
+\&	\\c      escape a character
+\&	#       comment
+.fi
 
 Some example commands/programs, one per line:
 
-.br
-	puts "Hello, World!"
-.br
-	set a 2; puts $a; puts "a is: $a";
-.br
-	if {< $a 3} { puts "a < three" } else { puts "a >= three" }
-.br
-	set a -1; while {< $a 3} { set a [+ $a 1]; puts $a; }
-.br
-	proc square {x} { * $x $x }; puts "$a squared is [square $a]";
-.br
-	set line [gets]; puts "you typed $line";
-
+.nf
+\&	puts "Hello, World!"
+\&
+\&	set a 2; puts $a; puts "a is: $a";
+\&
+\&	if {< $a 3} { puts "a < three" } else { puts "a >= three" }
+\&
+\&	set a -1; while {< $a 3} { set a [+ $a 1]; puts $a; }
+\&
+\&	proc square {x} { * $x $x }; puts "$a squared is [square $a]";
+\&
+\&	set line [gets]; puts "you typed $line";
+.fi
 
 .SH OPTIONS
 
@@ -111,12 +113,97 @@ This will run the pickle interpreter on a TCL script called
 
 .SH C API
 
-The C API is small and regular. 
+The C API is small and regular. All of the functions exported return the same
+error codes and implementing an interpreter loop is trivial. The only
+data structure available is a list of strings.
+
+The language can be extended with new functions written in C, each function
+accepts an integer length, and an array of pointers to ASCIIZ strings - much 
+like the 'main' function. 
+
+New, user defined commands can be registered with the 'pickle_register_command' 
+function. With in the user defined callbacks the 'pickle_set_result' family of 
+functions can be used. The callbacks passed to 'pickle_register_command' look
+like this:
+
+typedef int (*pickle_command_func_t)(pickle_t *i, int argc, char **argv, void *privdata);
+
+The callbacks accept a pointer to an instance of the pickle interpreter, and
+a list of strings (in 'argc' and 'argv'). Arbitrary data may be passed to the
+custom callback when the command is registered.
+
+The function returns one of the following status codes:
+
+.Xs
+.nf
+\&PICKLE_ERROR    = -1 (Throw an error until caught)
+\&PICKLE_OK       =  0 (Signal success, continue on execution)
+\&PICKLE_RETURN   =  1 (Return out of a function)
+\&PICKLE_BREAK    =  2 (Break out of a while loop)
+\&PICKLE_CONTINUE =  3 (Immediately proceed to next iteration of while loop)
+.fi
+.Xe
+
+These error codes can affect the flow control within the interpreter. The
+actual return value of the callback is set with 'pickle_set_result' functions.
+
+Some functions are define purely for convenience and are not strictly 
+necessary, such as 'pickle_set_result_error' and 'pickle_set_result_error_arity',
+these return 'PICKLE_ERROR' always, the latter function deals specifically with
+arity errors within functions, formatting the return buffer an number of
+arguments related error message. Likewise, the functions that set the return
+value to a number and not a string are wrappers around calls to 'snprintf'
+and 'pickle_set_result_string'. The 'get' and 'set' functions return 'PICKLE_OK'
+on success, and 'PICKLE_ERROR' on failure. A 'get' fails if the variable does
+not exists, a 'set' on a variable that does not exist creates that variable
+(which may failure, returning 'PICKLE_ERROR').
+
+Variables can be set either within or outside of the user defined callbacks
+with the 'pickle_set_variable' family of functions.
+
+The pickle library does not come with many built in functions, and comes with
+no Input/Output functions (even those available in the C standard library) to
+make porting to non-hosted environments easier. The example test driver program
+does add functions available in the standard library.
+
+The following is the source code for a simple interpreter loop that reads a
+line and then evaluates it:
+
+.Xs
+.nf
+\&#include "pickle.h"
+\&#include <stdio.h>
+\&#include <string.h>
+\&
+\&int main(void) {
+\&	pickle_t *p = NULL;
+\&	if (pickle_new(&p, NULL) < 0)
+\&		return -1;
+\&	const char *prompt = "> ";
+\&	fputs(prompt, stdout);
+\&	fflush(stdout);
+\&	for (char buf[80] = { 0 }; fgets(buf, sizeof buf, stdin); memset(buf, 0, sizeof buf)) {
+\&		const char *r = NULL;
+\&		const int er = pickle_eval(p, buf);
+\&		pickle_get_result_string(p, &r);
+\&		fprintf(stdout, "[%d]: %s\\n%s", er, r, prompt);
+\&		fflush(stdout);
+\&	}
+\&	return pickle_delete(p);
+\&}
+.fi
+.Xe
+
+Also present is a custom prompt.
+
+It should be obvious that the interface presented is not efficient for many
+uses, treating everything as a string has a cost. It is however simple and
+sufficient.
 
 .SH EXIT STATUS
 
 This command returns zero on success and non zero on failure, although any
-scripts executed may chose return other values.
+scripts executed may chose to return other values.
 
 .SH SEE ALSO
 
@@ -128,16 +215,15 @@ For more information, see
 For the sake of simplicity of the implementation the system has some
 limitations. The defaults as of writing this document are:
 
-.br
-* Recursion Depth - 128
-.br
-* Number of arguments to command/function - 128
-.br
-* Maximum string length - 512 bytes
-.br
-* Maximum command length (length of line) - 1024 bytes
-.br
-* Maximum size of file - 16384 bytes
+.nf
+\& * Recursion Depth - 128
+\& * Number of arguments to command/function - 128
+\& * Maximum string length - 512 bytes
+\& * Maximum command length (length of line) - 1024 bytes
+\& * Maximum size of file - 2GiB
+.fi
+
+These limitations should be removed in later releases.
 
 .SH BUGS
 For any bugs, contact the author.
