Turned 'argv' into a const list
Whilst useful to indicate that the 'argv' list should be 'const' it
seems to add too much noise to the function prototypes. I think I will
add the change in, then revert that change so I have a record of the
action on the mainline.

Other changes include:
* Some updates to the manual page.
* Making more functions 'inline' so they are eliminated when they have
no referents.
* Changed 'len' to 'len - 1' on some strncpy calls.
* Add some new calls in the API.

--- a/pickle.1
+++ b/pickle.1
@@ -198,7 +198,12 @@ Also present is a custom prompt.
 
 It should be obvious that the interface presented is not efficient for many
 uses, treating everything as a string has a cost. It is however simple and
-sufficient.
+sufficient for many tasks.
+
+While API presented in 'pickle.h' is small there are a few areas of
+complication. They are: The memory allocation API, registering a command, the
+getopt function and the unit tests. The most involved is the memory allocation
+API and there is not too much to it.
 
 .SH EXIT STATUS
 
