--- a/pickle.1
+++ b/pickle.1
@@ -1,14 +1,6 @@
 .\" Manpage for pickle
 .\" Contact howe.r.j.89@gmail.com to correct errors or typos.
-.de Xs
-.in +.5i
-.ll -.5i
-..
-.de Xe
-.in
-.ll
-..
-.TH pickle 1 "20 Jun 2019" "1.0.0" "pickle man page"
+.TH pickle 1 "6 Aug 2019" "1.0.0" "pickle man page"
 .SH NAME
 pickle \- An interpreter for a TCL like language.
 .SH SYNOPSIS
@@ -19,11 +11,11 @@ is an interpreter for a TCL like language, which was derived from a small
 program called 'picol', by Antirez. The language is not exactly like TCL but
 it is close enough. The goals of the project are to provide a simple and
 small (not efficient) interpreter that can embedded pretty much anywhere to
-be used as a command line interpreter, for example it could be used on an
+be used as a command line interpreter, for example it could be used in an
 embedded system where you may want to issue a few quick commands to the device
 over a UART interface.
 
-For a more complete description of the language, please view the
+For a more complete description of the language, and the C API, please view the
 .I readme.md
 file which you can find online at:
 .br
@@ -36,7 +28,7 @@ Things to bear in mind about the language:
 .br
 * Everything in the language is a string.
 .br
-* All things are commands, like in sh(1), they take the form 'command arg1, arg2, ...'
+* All things are commands, like in sh(1), they take the form 'command arg1 arg2 ...'
 .br
 * There is very little syntax.
 
@@ -110,10 +102,53 @@ processed one after the other.
 
 This will run the pickle interpreter on a TCL script called
 .I file.tcl
+Output is written to stdout(3).
+
+
+.B
+	./pickle
+
+This will run the pickle interpreter as a shell, input will be read in from
+stdin(3) a line at a time and the command evaluated, the result will be printed
+to stdout(3).
+
+.SH C API
+
+The C API is simple to use, it will not be described here as it has already
+been described in full in the pickle repository. You can instantiate an
+interpreter, with error checking, in a few dozen lines of code.
+
+.nf
+\&  #include "pickle.h"
+\&  #include <stdio.h>
+\&  #include <string.h>
+\&  
+\&  int main(void) {
+\&  	pickle_t *p = NULL;
+\&  	if (pickle_new(&p, NULL) < 0)
+\&  		return -1;
+\&  	const char *prompt = "> ";
+\&  	fputs(prompt, stdout);
+\&  	fflush(stdout);
+\&  	for (char buf[80] = { 0 }; fgets(buf, sizeof buf, stdin); memset(buf, 0, sizeof buf)) {
+\&  		const char *r = NULL;
+\&  		const int er = pickle_eval(p, buf);
+\&  		pickle_get_result_string(p, &r);
+\&  		fprintf(stdout, "[%d]: %s\\n%s", er, r, prompt);
+\&  		fflush(stdout);
+\&  	}
+\&  	return pickle_delete(p);
+\&  }
+.fi
+
+Custom commands can be registered with the interpreter, expressions evaluated
+and variables inspected. Consult the project documentation,
+.B readme.md
+, for more information.
 
 .SH EXIT STATUS
 
-This command returns zero on success and non zero on failure, although any
+This program returns zero on success and non zero on failure, although any
 scripts executed may chose to return other values.
 
 .SH SEE ALSO
@@ -127,21 +162,12 @@ For the sake of simplicity of the implementation the system has some
 limitations. The defaults as of writing this document are:
 
 .nf
-\& * Recursion Depth - 128
-\& * Number of arguments to command/function - 128
+\& * Recursion Depth - 128 (set at compile time)
+\& * Number of arguments to command/function - 128 (for some functions)
 \& * Maximum size of file - 2GiB
 .fi
 
 Some of these limitations should be removed in later releases.
-
-Limitations which should have been removed are:
-
-.nf
-\& * Maximum string length - 512 bytes (can be added back in with a compile time option)
-\& * Maximum command length (length of line) - 1024 bytes
-.fi
-
-If these are still present, this is a bug.
 
 .SH BUGS
 For any bugs, contact the author.
